# VeinForge

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: audit-log.md  backlog.md  benchmark.md  colab-gpu.md  ideas.md  p2-roadmap.md  related-work.md  retrain.md  scorecard.md  training-plan.md
docs/plans/: 2026-06-14-veinforge-p1-mvp.md
docs/references/: Leaf vein quantification method-Wheat.docx
docs/specs/: 2026-06-14-veinforge-mvp-design.md
notebooks/: train_strong_base.ipynb
scripts/: benchmark.py  fetch_dev_samples.py  fetch_leafveincnn.py  fetch_retinal.py  make_synth_pretrain.py  prep_leafveincnn.py  split_by_leaf.py  train_dl.py  webapp.py
tests/: conftest.py  test_augment.py  test_benchmark.py  test_cli.py  test_db.py  test_dl_segmenter.py  test_gui.py  test_io.py  test_leafstress.py  test_losses.py  test_measure.py  test_orient.py  test_params.py  test_pipeline.py  test_preprocess.py  test_report.py  test_segment.py  test_segment_factory.py  test_skeleton.py  test_stress.py  test_synthetic.py  test_tiling.py
veinforge/: __init__.py  augment.py  benchmark.py  cli.py  db.py  gui.py  io.py  leafstress.py  losses.py  measure.py  orient.py  params.py  pipeline.py  preprocess.py  report.py  skeleton.py  stress.py  synthetic.py  tiling.py
veinforge/segment/: __init__.py  base.py  classical.py  dl.py  unet.py
