[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "veinforge"
version = "0.1.0"
description = "Automated leaf-vein trait quantification for barley/wheat (classical-CV MVP)"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-image>=0.22",
    "skan>=0.11",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "typer>=0.9",
    "imageio>=2.31",
    "tifffile>=2023.7",
]

[project.optional-dependencies]
gui = ["napari[pyqt5]>=0.4.18"]
dev = ["pytest>=7.4", "ruff>=0.4"]

[project.scripts]
veinforge = "veinforge.cli:app"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
